--- a/Lore-Fronton-React-Recoil/Lore-Fronton-React-Recoil.csproj
+++ b/Lore-Fronton-React-Recoil/Lore-Fronton-React-Recoil.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -29,6 +29,15 @@
     <Content Remove="$(SpaRoot)**" />
     <None Remove="$(SpaRoot)**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="..\Lore-Common\Models\Action.cs" Link="Models\Action.cs" />
+    <Compile Include="..\Lore-Common\Models\ActionTypes.cs" Link="Models\ActionTypes.cs" />
+    <Compile Include="..\Lore-Common\Models\BackendServers.cs" Link="Models\BackendServers.cs" />
+    <Compile Include="..\Lore-Common\Models\Frontons.cs" Link="Models\Frontons.cs" />
+    <Compile Include="..\Lore-Common\Models\Process.cs" Link="Models\Process.cs" />
+    <Compile Include="..\Lore-Common\Models\Step.cs" Link="Models\Step.cs" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
