--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        ref: develop
+        ref: dev
         submodules: true
     - name: Setup .NET Core
       uses: actions/setup-dotnet@master
