--- a/Lore-Fronton-React-Recoil/appsettings.json
+++ b/Lore-Fronton-React-Recoil/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Lore_Fronton_React_Recoil-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "PostgresConnection": "Host=localhost;Port=5432;User Id=postgres;Password=postgres;Database=Lore"
+    "PostgresConnection": "Host=localhost;Port=5432;User Id=postgres;Password=postgres;Database=Lore_BPS_Test"
 
   },
   "Logging": {
