--- a/Lore-Fronton-React-Recoil/ClientApp/package.json
+++ b/Lore-Fronton-React-Recoil/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@projectstorm/react-diagrams": "^6.2.0",
     "bootstrap": "^4.5.1",
     "graphql": "^15.3.0",
     "jquery": "^3.5.1",
