--- a/Lore-Fronton-React-Recoil/ClientApp/package.json
+++ b/Lore-Fronton-React-Recoil/ClientApp/package.json
@@ -3,19 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
+    "@projectstorm/react-canvas-core": "^6.2.0",
     "@projectstorm/react-diagrams": "^6.2.0",
+    "@projectstorm/react-diagrams-core": "^6.2.0",
+    "@projectstorm/react-diagrams-defaults": "^6.2.0",
+    "@projectstorm/react-diagrams-routing": "^6.2.0",
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.6.0",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "babel-eslint": "^10.1.0",
     "bootstrap": "^4.5.1",
+    "closest": "^0.0.1",
+    "dagre": "^0.8.5",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "graphql": "^15.3.0",
     "jquery": "^3.5.1",
+    "lodash": "4.*",
     "merge": "^1.2.1",
+    "ml-matrix": "^6.5.1",
     "oidc-client": "^1.9.0",
+    "pathfinding": "^0.4.18",
+    "paths-js": "^0.4.11",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.3",
     "reactstrap": "^8.5.1",
     "recoil": "0.0.10",
+    "resize-observer-polyfill": "^1.5.1",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
