test add front component

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 [submodule "Lore-Data-Access-Library"]
 	path = Lore-Data-Access-Library
 	url = https://github.com/Lore-BPS/Lore-Data-Access-Library
-[submodule "react-diagrams"]
-	path = react-diagrams
-	url = https://github.com/projectstorm/react-diagrams
+[submodule "Lore-Fronton-React-Recoil\\ClientApp\\src\\react-core"]
+	path = Lore-Fronton-React-Recoil\\ClientApp\\src\\react-core
+	url = https://github.com/projectstorm/react-core.git
